--- a/inkhaven/pubspec.yaml
+++ b/inkhaven/pubspec.yaml
@@ -17,6 +17,10 @@ dependencies:
   google_fonts: ^6.2.1
   flutter_svg: ^2.0.10+1
   localization: ^2.1.1
+  flutter_bloc: ^8.1.4
+  font_awesome_flutter: ^10.7.0
+  get_it: ^7.6.7
+  google_sign_in: ^6.2.1
 
 dev_dependencies:
   flutter_test:
@@ -30,10 +34,11 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-      - assets/svg/poster.svg
       - assets/images/poster.png
       - assets/lang/en.json
       - assets/lang/hr.json
+      - assets/svg/google.svg
+      - assets/images/google.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
