--- a/inkhaven/pubspec.yaml
+++ b/inkhaven/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   get_it: ^7.6.7
   google_sign_in: ^6.2.1
+  flutter_keyboard_visibility: ^6.0.0
 
 dev_dependencies:
   flutter_test:
