--- a/inkhaven/pubspec.yaml
+++ b/inkhaven/pubspec.yaml
@@ -22,6 +22,9 @@ dependencies:
   get_it: ^7.6.7
   google_sign_in: ^6.2.1
   flutter_keyboard_visibility: ^6.0.0
+  http: ^1.2.1
+  flutter_secure_storage: ^9.0.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
